# PIM-PERSO-2025

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_health.py
frontend/: package.json
frontend/pages/: index.tsx
